Tightup implementation.